fixed footer spacing

--- a/styles.css
+++ b/styles.css
@@ -179,9 +179,9 @@ footer a {
     text-decoration: none;
 }
 footer .contacts {
-    font-size: 32px;
+    font-size: 24px;
     background-color: #899AF5;
-    padding: 20px 20px;
+    padding: 15px 15px;
     border-radius: 50%;
     color: rgba(255,255,255, 0.7);
     transition: all 150ms ease-in-out;
@@ -193,7 +193,7 @@ footer .contacts:hover {
 }
 
 footer .figma {
-    padding: 20px 25px;
+    padding: 15px 18px;
 }
 
 @media (max-width: 1200px) {
